Fix up validation and performance tweaks
This commit address PR feedback on validation and improves perf a bit.

1. Added an alternative approach to tracking required members for
   structures with more than 32 members.
2. Created an abstraction for validating strings that ensures things
   like length checks are only performed when necessary.
3. Migrated to using static final classes for serialization BiConsumers
   as this seems to much more consistently result in the JVM inlining
   them rather than using static method references.
4. Map validation now uses paths like `/mapMember/<key>/key|value`.
5. Updating various bits of code to encourage inlining or account for
   the fact that methods weren't being inlined.
6. Updated most ValidationError implementations to accept a schema.
   This will help future proof them in case we ever need to or want
   to change what or how they show information (e.g., if we wanted to
   show allowed enums and take internal into account, it's
   theoretically possible).
7. Got rid of the stateless ValidatorOfStruct this seems to only hurt
   perf, and the JVM seems to somehow be able to elide the cost of
   creating ValidatorOfRequiredStruct.
8. Updated various methods on SdkSchema to return null rather than
   throw (e.g., memberName()).
9. Removed writeIfNotNull methods from ShapeSerializer. These were
   never getting inlined and we don't really need them anyways.
10. Updated pushPath to now only need one branch to check if the
    path needs to be resized by ensuring the that path is never
    resized beyond maxDepth. This makes it so that maxDepth checking
    only has to happen when a resize is needed.